Fix things on mobile

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -90,7 +90,7 @@ a:hover {
   border-radius: 1px;
   margin: 0 auto;
   margin-top: 4px;
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, 0.87);
 }
 .navBarToggle .iconBar:first-child {
   margin-top: 0px;
@@ -887,7 +887,7 @@ img {
     border-top: 1px solid #000;
   }
   .headerTitle {
-    padding-right: 50px;
+    padding-right: 20px;
     font-size: 20px;
   }
   .navBarBrand {
@@ -999,6 +999,13 @@ img {
     max-height: fit-content;
     position: static;
   }
+
+.mainMenuItemActive {
+  border-bottom: none;
+}
+.navBarUL li.mainMenuItemActive a {
+  color: #29a59b !important;
+}
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
